# Exo-FMS_column_ck

./: .gitignore  CMakeLists.txt  FMS_RC.nml
cmake/: compilers.cmake
cmake/macros/: macro_create_data_link.cmake  macro_setup_test.cmake
interface/: CMakeLists.txt  exofmsrt.cpp  exofmsrt.h.in  exofmsrt.hpp
src/: CMakeLists.txt  FMS_RC.f90  IC_mod.f90  fms_rc_mod.f90
tests/: CMakeLists.txt  test_exofms.cpp
